--- a/src/styles/designs/extra.module.scss
+++ b/src/styles/designs/extra.module.scss
@@ -13,8 +13,7 @@
 
 /* Hero Section */
 .heroWrapper {
-    background: linear-gradient(rgba(#141411, 0.8), rgba(#141411, 0.95)), url('/background.jpg') center/cover no-repeat;
-    background-color: #141411;
+    background: #141411;
     padding: 14rem 0 8rem;
     text-align: center;
     color: $white;
